# c-lightning-http-plugin-stdio

./: Cargo.toml
src/: main.rs
