[package]
name = "c-lightning-http-plugin"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.6"